vendor/registry-40351f815f426200/remain/tests/ui/unsupported.stderr
error: unsupported by #[remain::sorted]
 --> $DIR/unsupported.rs:7:9
  |
7 |         0..=20 => {}
  |         ^^^^^^
