vendor/registry-40351f815f426200/remain/tests/ui/unsupported.rs
#[remain::check]
fn main() {
    let value = 0;

    #[sorted]
    match value {
        0..=20 => {}
        _ => {}
    }
}
